# av-perception

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: FindCUFRAMEWORK.cmake
include/: cameraProcess.h
sample/camera/: CMakeLists.txt  main.cpp  main.hpp
src/apps/camera/: main.cpp
src/apps/detector/: main.cpp
src/camera/: CMakeLists.txt  cameraProcess.cpp
src/camera/cudaKernal/: cameraProcess.cu
src/model/: BaseModel.hpp  maximun_likelihood.hpp
src/module/: objectTracker.hpp
